--- a/.github/workflows/ciPipeline.yml
+++ b/.github/workflows/ciPipeline.yml
@@ -10,6 +10,8 @@ jobs:
   build:
     environment: Development
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       # - name: Checkout code
       #   uses: actions/checkout@v3
@@ -26,6 +28,8 @@ jobs:
     environment: Development
     needs: [build]
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       # - name: Download the artefact
       #   uses: actions/download-artifact@v2
@@ -38,6 +42,8 @@ jobs:
     environment: Development
     needs: [build, deploy]
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     services:
       mock-for-application-under-test:
         image: hello-world
