--- a/.github/workflows/envDependentJobs.yml
+++ b/.github/workflows/envDependentJobs.yml
@@ -7,14 +7,21 @@ jobs:
   dev:
     runs-on: ubuntu-latest
     environment: dev
+    env:
+      URL_GOOGLE: ${{ secrets.URL_GOOGLE }}
     steps:
+      - name: Verify URL
+        run: if [[ "$URL_GOOGLE"!="" ]]; then echo "Env secret for DEV has been read correctly."
       - name: Do something on the DEV environment
         run: echo "Insert desired steps below..."
+
 
   uat:
     runs-on: ubuntu-latest
     environment: uat
     needs: dev
     steps:
+      - name: Verify URL
+        run: if [[ "$URL_GOOGLE"!="" ]]; then echo "Env secret for UAT has been read correctly."
       - name:  Do something on the UAT environment
         run: echo "Insert desired steps below..."
