--- a/.github/workflows/runReusableWorkflow.yml
+++ b/.github/workflows/runReusableWorkflow.yml
@@ -11,7 +11,7 @@ on:
         type: choice
         options:
           - dev
-          - qa
+          - uat
       greeting:
         description: 'Set greeting text'
         required: true
